<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_help">Help</string>
    <string name="app_name">Espresso Log</string>
    <string name="action_settings">Settings</string>
    <string name="action_newLog">New Log</string>
    <string name="action_clear">Clear Logs</string>
    <string name="action_logo">Logo</string>
    <string name="title_activity_new_log">newLog</string>
    <string name="shot_time_text">Shot time</string>
    <string name="shot_time_hint">Enter shot time here</string>
    <string name="temperature_text">Temperature</string>
    <string name="temperature_hint">Enter temperature here</string>
    <string name="weight_text">Shot weight</string>
    <string name="weight_hint">Enter shot weight here</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="text_rating">Rating</string>
    <string name="text_grind">Grind setting</string>
    <string name="grind_hint">Enter the grind setting used</string>
    <string name="text_notes">Additional notes</string>
    <string name="notes_hint">Enter any additional notes</string>
    <string name="rating_hint">Enter your rating (out of 10)</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="heading">Date Created</string>
    <string name="heading2">NA</string>
    <string name="heading3">Rating</string>
    <string name="date_text_placeholder">NA</string>
    <string name="brew_ratio_text_placeholder">NA</string>
    <string name="shot_time_text_placeholder">NA</string>
    <string name="rating_text_placeholder">NA</string>
    <string name="text_dose">Dose</string>
    <string name="dose_hint">Enter coffee dose here</string>
    <string name="text_volume">Volume</string>
    <string name="volume_hint">Enter shot volume (in mL)</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="main_banner_unit_id">ca-app-pub-1331096712267333/6218278600</string>
    <string name="no_saved_logs_title">Looks like you haven\'t saved any logs!</string>
    <string name="no_saved_logs_body">To start, go to settings and decide what you wish to log,
                                        then create a new log by pressing the new symbol!</string>
    <string name="detail_title">Log Details</string>

    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_reset">Reset</string>
</resources>
