<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="espressolog.com.espressolog.newLog">

    <TextView android:id="@+id/shot_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shot_time_text"/>
    <EditText android:id="@+id/shot_time_input"
        android:layout_below="@id/shot_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shot_time_hint"
        android:inputType="number"
        android:paddingBottom="16dp"/>

    <TextView android:id="@+id/weight"
        android:layout_below="@id/shot_time_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight_text"/>
    <EditText android:id="@+id/weight_input"
        android:layout_below="@id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight_hint"
        android:inputType="number"
        android:paddingBottom="16dp"/>

    <TextView android:id="@+id/temperature"
        android:layout_below="@id/weight_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperature_text"/>
    <EditText android:id="@+id/temperature_input"
        android:layout_below="@id/temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/temperature_hint"
        android:inputType="number"
        android:paddingBottom="16dp"/>


    <TextView android:id="@+id/rating"
        android:layout_below="@id/temperature_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_rating"/>
    <EditText android:id="@+id/rating_input"
        android:layout_below="@id/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rating_hint"
        android:inputType="number"
        android:paddingBottom="16dp"/>

    <TextView android:id="@+id/dose"
        android:layout_below="@id/rating_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_dose"/>
    <EditText android:id="@+id/dose_input"
        android:layout_below="@id/dose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dose_hint"
        android:inputType="number"
        android:paddingBottom="16dp"/>


    <Button android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dose_input"
        android:text="@string/button_save"
        android:onClick="save"
        android:textColor="@color/TextColor"
        android:background="@color/PrimaryColor"/>

    <View android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:background="@color/TextColor"
        android:layout_below="@id/button_save"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"/>

    <Button android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:text="@string/button_cancel"
        android:onClick="cancel"
        android:textColor="@color/TextColor"
        android:background="@color/PrimaryColor"/>


</RelativeLayout>
